# modern_cpp_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md
src/: main.cpp
src/include/: my_ho_lib.h  my_lib.h
src/lib/: my_lib.cpp
src/tests/: congratulate_test.cpp
